cncProd/force-app/main/default/objects/Form_Process_Bar__mdt/Form_Process_Bar__mdt.object-meta.xml
<CustomObject>
    <label>Form Process Bar</label>
    <pluralLabel>Form Process Bars</pluralLabel>
</CustomObject>