cncProd/force-app/main/default/objects/Form_Process_Bar__mdt/fields/displayLabel__c.field-meta.xml
<CustomField>
    <fullName>displayLabel__c</fullName>
    <label>displayLabel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>