cncProd/force-app/main/default/objects/Form_Process_Bar__mdt/fields/Process_Path_Label__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Label__c</fullName>
    <defaultValue>(&quot;Stage 1&quot;)</defaultValue>
    <label>Process Path Label</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>