cncProd/force-app/main/default/objects/Form_Process_Bar__mdt/fields/Process_Sequence_Number__c.field-meta.xml
<CustomField>
    <fullName>Process_Sequence_Number__c</fullName>
    <defaultValue>TEXT(1)</defaultValue>
    <label>Process Sequence Number</label>
    <length>2</length>
    <required>true</required>
    <type>Text</type>
</CustomField>